# department-agent-platform

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
cli/: README.md  pyproject.toml
cli/agent_cli/: __main__.py  client.py  config.py  local_agent.py
cli/tests/: test_local_agent.py
deploy/: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  models.example.yaml  server.Dockerfile  web.Dockerfile
desktop/: README.md  package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.coder.conf.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: architecture.md  management.md  packaging.md  protocol.md  roadmap.md  security.md
runner/: README.md  agent-runner.spec  build_binary.py  config.example.yaml  entry.py  pyproject.toml
runner/agent_runner/: __main__.py  client.py  config.py  plugins.py  secure_path.py  tools.py
runner/tests/: test_plugins.py  test_secure_path.py  test_tools.py
scripts/: README.md  dev_up.sh  e2e_agent.py  e2e_smoke.py  fake_model_server.py
server/: .env.example  README.md  models.example.yaml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1a8fa2080d7c_connectors_and_scopes.py  69a0df56ab66_model_backends_and_user_routes.py  78c84b4bf2e8_machine_tools_column.py  861974874413_skills.py  a7c2e91d5b04_connector_require_approval.py  b3d8f12c4e90_user_api_keys.py  c4e7a91f08b2_model_oauth.py  c596f1a86342_initial_schema.py  d5f1b830a7c4_per_user_codex.py  e6a4c12d9f37_user_status_registration.py  f44fb3430e45_skill_source_column.py
server/app/: agent.py  audit.py  auth.py  builtin_skills.py  client_ws.py  codex_adapter.py  config.py  connector_admin.py  connector_providers.py  connector_registry.py  connectors.py  events.py  main.py  model_admin.py  model_gateway.py  model_providers.py  models.py  oauth.py  redaction.py  registry.py  relay.py  risk.py  routes.py  schemas.py  secret.py  services.py  skills.py  tool_specs.py  user_models.py  ws.py
server/tests/: _mcp_echo_server.py  conftest.py  test_agent.py  test_approval.py  test_audit.py  test_auth.py  test_authz.py  test_codex.py  test_connectors.py  test_dispatch.py  test_grants.py  test_model_admin.py  test_oauth.py  test_registration.py  test_relay.py  test_server.py  test_sessions.py  test_skills.py  test_streaming.py
(+94 files in other folders)
