[project]
name = "agent-cli"
version = "0.1.0"
description = "Department Agent Platform вАФ зїИзЂѓеЃҐжИЈзЂѓ(зШ¶еЃҐжИЈзЂѓ)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=14",
]

[project.scripts]
agent = "agent_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_cli"]
