[project]
name = "agent-runner"
version = "0.1.0"
description = "Department Agent Platform — Runner 客户端"
requires-python = ">=3.11"
dependencies = [
    "websockets>=14",
    "httpx>=0.27",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
