[package]
name = "department-agent-desktop"
version = "0.1.0"
description = "Department Agent desktop client"
authors = ["Codex"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
url = "2"
